# yubo_test

./: .coverage  .env  README.md  compose.yaml  noxfile.py  pyproject.toml
Python_Engineer/: Dockerfile  batching.cfg  example_request.json
Python_Engineer/resnet18_places365/1/: fingerprint.pb
Python_Engineer/test_images/: test.ipynb
response/: response_1.json  response_2.json  response_3.json
tests/: test_api.py  testing_script.py
yubo_test/: Dockerfile  main.py
