[tool.poetry]
name = "yubo-test"
version = "0.1.0"
description = ""
authors = ["MChrys <chrys.beltran@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
numpy = { version = "^1.26.0", python = ">=3.12,<3.13" }
pillow = "^10.1.0"
requests = "^2.31.0"
httpx = "^0.25.1"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

